<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainMenu!</string>
    <string name="app_name">DevilsTower208228130</string>
    <string name="mainMenu_exitGame">Exit Game</string>
    <string name="mainMenu_settings">Settings</string>
    <string name="mainMenu_HighScores">High Scores</string>
    <string name="mainMenu_NewGame">New Game</string>
    <string name="mainMenu_Continue">Continue</string>

</resources>