<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mainMenu_ExitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/mainMenu_exitGame"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/mainMenu_Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/mainMenu_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenu_ExitGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/mainMenu_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mainMenu_HighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenu_Settings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/mainMenu_HighScores"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mainMenu_NewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenu_HighScores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/mainMenu_NewGame"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mainMenu_Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenu_NewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/mainMenu_Continue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>